// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Theme generates theme correctly from generator that is not recursive 1`] = `
{
  "palette": {
    "action": {
      "alternate": {
        "danger": {
          "active": "#ff544f14",
          "disabled": "#0000000a",
          "focus": "#ff544f14",
          "hover": "#00000014",
          "selected": "#ff544f3d",
        },
      },
    },
  },
  "shape": {
    "border": {
      "radius": {
        "sharp": 0,
      },
    },
  },
}
`;

exports[`Generate Theme generates theme correctly from recursived generator 1`] = `
{
  "palette": {
    "action": {
      "alternate": {
        "danger": {
          "active": "#00000014",
          "disabled": "#00000014",
          "focus": "#0000000a",
          "hover": "#00000014",
          "selected": "#ff544f3d",
        },
      },
    },
  },
  "shape": {
    "border": {
      "radius": {
        "anotherSharp": 0,
        "sharp": 0,
      },
    },
  },
}
`;
